[gd_scene load_steps=5 format=3 uid="uid://sq8qhd2fc431"]

[ext_resource type="Texture2D" uid="uid://ctcslkp6l7w6l" path="res://assets/textures/ui/ScoreBox.png" id="1_c2kw5"]
[ext_resource type="Script" path="res://scripts/hud.gd" id="1_u40lp"]
[ext_resource type="Texture2D" uid="uid://0teqxala0onw" path="res://assets/textures/ui/PauseBtn.png" id="3_sp3l7"]

[sub_resource type="LabelSettings" id="LabelSettings_4xvfc"]
font_size = 36
font_color = Color(0, 0, 0, 1)

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_u40lp")

[node name="TopBarBg" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 90.0
grow_horizontal = 2
color = Color(0, 0, 0, 0.45098)

[node name="TopBar" type="Control" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 90.0
grow_horizontal = 2

[node name="TextureRect" type="TextureRect" parent="TopBar"]
layout_mode = 0
offset_left = 5.0
offset_top = 6.0
offset_right = 287.0
offset_bottom = 83.0
texture = ExtResource("1_c2kw5")
expand_mode = 1

[node name="Label" type="Label" parent="TopBar"]
layout_mode = 0
offset_left = 16.0
offset_top = 24.0
offset_right = 271.0
offset_bottom = 78.0
text = "99999999"
label_settings = SubResource("LabelSettings_4xvfc")
horizontal_alignment = 2
vertical_alignment = 1

[node name="PauseButton" type="TextureButton" parent="TopBar"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -90.0
offset_top = 6.0
offset_right = -8.0
offset_bottom = 84.0
grow_horizontal = 0
texture_normal = ExtResource("3_sp3l7")

[connection signal="pressed" from="TopBar/PauseButton" to="." method="_on_pause_button_pressed"]
